test/resources/valid/com/boothj5/jarchexample/common/DateUtil.java
package com.boothj5.jarchexample.common;

import java.util.List;