test/resources/invalid/com/boothj5/jarchexample/application/person/controller/PersonController.java
package com.boothj5.jarchexample.application.person.controller;

import java.util.List;

import com.boothj5.jarchexample.applicaion.common;
import com.boothj5.jarchexample.application.person.facade.PersonFacade;
